--- a/raddit/config/database.yml
+++ b/raddit/config/database.yml
@@ -5,24 +5,30 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  # adapter: sqlite3
+  adapter: postgresql
   pool: 5
-  timeout: 5000
+  # timeout: 5000
+  encoding: unicode
 
 development:
   <<: *default
   host: localhost
   username: postgres
-  password: 
-  database: raddit_dev
+  password:
+  database: raddit-dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: raddit-test
+  username: postgres
+  password:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: raddit-prod
+  username: postgres
+  password:
